--- a/pages/equipo.html
+++ b/pages/equipo.html
@@ -180,7 +180,7 @@
  <!-- INICIO DE SECCIÓN EQUIPO --> <!-- DESARROLLO TÍTULO PRINCIPAL -->
   <div class="contenedor-personas">
       <div class="persona">
-          <img src= "\OSN\Imagenes_equipo\Freddy_Saavedra.png"> 
+          <img src= "../Imagenes_equipo/Freddy_Saavedra.png"> 
           <div class="descripcion">
               <h4><b>Freddy Saavedra</b></h4>
               <h5>Director de laboratorio</h5>
@@ -190,7 +190,7 @@
       </div>
       
       <div class="persona">
-          <img src="\OSN\Imagenes_equipo\Ana_Hernandez.png"> 
+          <img src="../Imagenes_equipo/Ana_Hernandez.png"> 
           <div class="descripcion">
               <h4><b>Ana Hernández-Duarte</b></h4>
               <h5>Investigadora</h5>
@@ -200,7 +200,7 @@
       </div>
   
       <div class="persona">
-          <img src="\OSN\Imagenes_equipo\Carlos_Romero.png"> 
+          <img src="../Imagenes_equipo/Carlos_Romero.png"> 
           <div class="descripcion">
               <h4><b>Carlos Romero</b></h4>
               <h5>Investigador</h5>
@@ -221,7 +221,7 @@
       </div>
   
       <div class="persona">
-        <img src="\OSN\Imagenes_equipo\Javier_Medina.png"> 
+        <img src="../Imagenes_equipo/Javier_Medina.png"> 
         <div class="descripcion">
             <h4><b>Javier Medina </b></h4>
             <h5>Ayudante de investigación</h5>
@@ -232,7 +232,7 @@
     </div>
   
       <div class="persona">
-          <img src="\OSN\Imagenes_equipo\Pablo_Arancibia.jpeg"> 
+          <img src="../Imagenes_equipo/Pablo_Arancibia.jpeg"> 
           <div class="descripcion">
               <h4><b>Pablo Arancibia </b></h4>
               <h5>Ayudante de investigación</h5>
