--- a/pages/equipo.html
+++ b/pages/equipo.html
@@ -210,7 +210,7 @@
       </div>
   
       <div class="persona">
-          <img src="\OSN\Imagenes_equipo\Valentina_Contreras.png"> 
+          <img src="../Imagenes_equipo/Valentina_Contreras.png"> 
           <div class="descripcion">
               <h4><b>Valentina Contreras</b></h4>
               <h5>Ayudante de investigación</h5>
