--- a/index.html
+++ b/index.html
@@ -3,27 +3,17 @@
 
 <head>
 
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-MGPGGZ6L6K"></script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-PC2JPM4B1L"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-MGPGGZ6L6K');
+  gtag('config', 'G-PC2JPM4B1L');
 </script>
 
 <!-- Hotjar Tracking Code for https://observatorionieves.cl/ -->
-<script>
-  (function(h,o,t,j,a,r){
-      h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
-      h._hjSettings={hjid:2725434,hjsv:6};
-      a=o.getElementsByTagName('head')[0];
-      r=o.createElement('script');r.async=1;
-      r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
-      a.appendChild(r);
-  })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
-  </script>
 
  <script>
     (function() {
@@ -179,10 +169,10 @@
             <h4 class="text-uppercase txt-azul-2">Navegación</h4>
             <ul>
               <li><i class="bx bx-chevron-right txt-azul-2"></i> <a href="#">Inicio</a></li>
-              <li><i class="bx bx-chevron-right txt-azul-2"></i> <a href="../OSN/pages/nacional.html">Nacional</a></li>
-              <li><i class="bx bx-chevron-right txt-azul-2"></i> <a href="../OSN/pages/cuencas.html">Cuencas</a></li>
-              <li><i class="bx bx-chevron-right txt-azul-2"></i> <a href="../OSN/pages/metodologia.html">Metodología</a></li>
-              <li><i class="bx bx-chevron-right txt-azul-2"></i> <a href="../OSN/pages/equipo.html">Equipo</a></li>
+              <li><i class="bx bx-chevron-right txt-azul-2"></i> <a href="./pages/nacional.html">Nacional</a></li>
+              <li><i class="bx bx-chevron-right txt-azul-2"></i> <a href="./pages/cuencas.html">Cuencas</a></li>
+              <li><i class="bx bx-chevron-right txt-azul-2"></i> <a href="./pages/metodologia.html">Metodología</a></li>
+              <li><i class="bx bx-chevron-right txt-azul-2"></i> <a href="./pages/equipo.html">Equipo</a></li>
 
               <!--<li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>-->
             </ul>
@@ -199,14 +189,6 @@
               <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li>-->
             </ul>
-          </div>
-
-          <div class="col-lg-4 col-md-6 footer-newsletter" data-aos="fade-up" data-aos-delay="350">
-            <h4 class="text-uppercase txt-azul-2">Boletín de avances</h4>
-            <p>Si desea estar al tanto del proyecto, complete el formulario:</p>
-            
-            <a href="https://docs.google.com/forms/d/e/1FAIpQLSezWLT4Y46nXQY3DKWx0L5qfn6K45ZAL1NbsAfVUSNWUmrGDA/viewform?usp=sf_link" class="btn btn-obs-info text-uppercase" target="_blank">Subscribirse</a>
-
           </div>
 
         </div>
