--- a/pages/cuencas.html
+++ b/pages/cuencas.html
@@ -4,27 +4,18 @@
 <head>
  
 
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-MGPGGZ6L6K"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-PC2JPM4B1L"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-    gtag('config', 'G-MGPGGZ6L6K');
-  </script>
+  gtag('config', 'G-PC2JPM4B1L');
+</script>
 
   <!-- Hotjar Tracking Code for https://observatorionieves.cl/ -->
-  <script>
-    (function (h, o, t, j, a, r) {
-      h.hj = h.hj || function () { (h.hj.q = h.hj.q || []).push(arguments) };
-      h._hjSettings = { hjid: 2725434, hjsv: 6 };
-      a = o.getElementsByTagName('head')[0];
-      r = o.createElement('script'); r.async = 1;
-      r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
-      a.appendChild(r);
-    })(window, document, 'https://static.hotjar.com/c/hotjar-', '.js?sv=');
-  </script>
+
 
   <script>
     (function () {
@@ -498,8 +489,7 @@
 
 
   <section id="page-bottom"></section>
-
- <!-- ======= Footer ======= -->
+<!-- ======= Footer ======= -->
 <footer id="footer" class="bg-azul-1">
   <div class="footer-top ">
       <div class="container">
@@ -522,11 +512,11 @@
               <div class="col-lg-2 col-md-6 footer-links" data-aos="fade-up" data-aos-delay="150">
                   <h4 class="text-uppercase txt-azul-2">Navegación</h4>
                   <ul>
-                      <li><i class="bx bx-chevron-right txt-azul-2"></i> <a href="../index.html">Inicio</a></li>
-                      <li><i class="bx bx-chevron-right txt-azul-2"></i> <a href="../pages/nacional.html">Nacional</a></li>
-                      <li><i class="bx bx-chevron-right txt-azul-2"></i> <a href="../pages/cuencas.html">Cuencas</a></li>
-                      <li><i class="bx bx-chevron-right txt-azul-2"></i> <a href="../pages/metodologia.html">Metodología</a></li>
-                      <li><i class="bx bx-chevron-right txt-azul-2"></i> <a href="#">Equipo</a></li>
+                      <li><i class="bx bx-chevron-right txt-azul-2"></i> <a href="./index.html">Inicio</a></li>
+                      <li><i class="bx bx-chevron-right txt-azul-2"></i> <a href="./pages/nacional.html">Nacional</a></li>
+                      <li><i class="bx bx-chevron-right txt-azul-2"></i> <a href="./pages/cuencas.html">Cuencas</a></li>
+                      <li><i class="bx bx-chevron-right txt-azul-2"></i> <a href="./pages/metodologia.html">Metodología</a></li>
+                      <li><i class="bx bx-chevron-right txt-azul-2"></i> <a href="./pages/equipo.html"">Equipo</a></li>
                   </ul>
               </div>
 
@@ -538,11 +528,7 @@
                   </ul>
               </div>
 
-              <div class="col-lg-4 col-md-6 footer-newsletter" data-aos="fade-up" data-aos-delay="350">
-                  <h4 class="text-uppercase txt-azul-2">Boletín de avances</h4>
-                  <p>Si desea estar al tanto del proyecto, complete el formulario:</p>
-                  <a href="https://docs.google.com/forms/d/e/1FAIpQLSezWLT4Y46nXQY3DKWx0L5qfn6K45ZAL1NbsAfVUSNWUmrGDA/viewform?usp=sf_link" class="btn btn-obs-info text-uppercase" target="_blank">Subscribirse</a>
-              </div>
+
           </div>
       </div>
   </div>
@@ -561,6 +547,18 @@
 
 
 
+
+  <!-- Vendor JS Files -->
+  <script src="../assets/vendor/jquery/jquery.min.js"></script>
+  <script src="../assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="../assets/vendor/jquery.easing/jquery.easing.min.js"></script>
+  <script src="../assets/vendor/php-email-form/validate.js"></script>
+  <script src="../assets/vendor/waypoints/jquery.waypoints.min.js"></script>
+  <script src="../assets/vendor/counterup/counterup.min.js"></script>
+  <script src="../assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+  <script src="../assets/vendor/venobox/venobox.min.js"></script>
+  <script src="../assets/vendor/owl.carousel/owl.carousel.min.js"></script>
+  <script src="../assets/vendor/aos/aos.js"></script>
 
 
   <!-- Javascript Image Zoom On Click -->
