--- a/pages/equipo.html
+++ b/pages/equipo.html
@@ -224,7 +224,7 @@
     </div>
   
       <div class="persona">
-          <img src="../Imagenes_equipo/Pablo_Arancibia.jpeg"> 
+          <img src="../Imagenes_equipo/Pablo_Arancibia.jpg"> 
           <div class="descripcion">
               <h4><b>Pablo Arancibia </b></h4>
               <h5>Ayudante de investigación</h5>
