--- a/index.html
+++ b/index.html
@@ -124,14 +124,27 @@
             <p>
             </p>
             <p style="text-align: justify;">
-              Desarrollado por el Laboratorio de Teledetección Ambiental (TeleAmb) de la Universidad de Playa Ancha en el marco del concurso IDeA FONDEF ID20i10058, este proyecto tiene como objetivo generar un observatorio de nieves para la cuenca del río Aconcagua. 
-              El observatorio recopila información histórica y actual de forma continua, integrando diversas fuentes de información espacial.
-              Esto permitirá cuantificar posibles impactos, así como determinar y preparar planes de gestión de riesgos de desastres, seguridad hídrica y adaptación al cambio climático.
-          </div>
+              <p>
+                La cobertura de nieves es un factor climático crucial, ya que influye en el albedo superficial, el balance energético y la circulación hidrológica. Por lo tanto, bajo los diferentes escenarios de cambio climático, es esencial su monitoreo para evaluar los efectos en el balance hídrico y la gestión de las cuencas alimentadas por el deshielo.
+              </p>
+              <p>
+                Utilizamos técnicas avanzadas de teledetección y los satélites MODIS Terra y Aqua para obtener datos precisos y actualizados sobre la cobertura de nieves. La teledetección es esencial porque permite la observación continua y precisa de grandes áreas geográficas, algo que sería impracticable con estaciones de monitoreo en tierra, especialmente en áreas montañosas de alta variabilidad ambiental.
+              </p>
+              <p>
+                La variabilidad espacio-temporal de los patrones de cobertura de nieves se utiliza para generar modelos operacionales de deshielo, pronósticos de escorrentía, asimilación de datos y calibración/validación de varios modelos hidrológicos. Una adecuada determinación de esta variabilidad permite cuantificar impactos y desarrollar planes de gestión de riesgos de desastres, seguridad hídrica y adaptación al cambio climático.
+              </p>
+              <p>
+                Sin embargo, la baja cantidad de estaciones de monitoreo en tierra limita la capacidad de capturar esta variabilidad, especialmente en áreas montañosas donde la variabilidad ambiental es alta y los costos de monitoreo son elevados. Por eso, el observatorio recopila información histórica y actual de forma continua, integrando diversas fuentes de información espacial.
+              </p>
+              <p>
+                El equipo de trabajo está compuesto por investigadores de la Facultad de Ciencias Naturales y Exactas y la Facultad de Ingeniería de la Universidad de Playa Ancha (UPLA), a través del Laboratorio de Teledetección Ambiental (TeleAmb). Este proyecto ha sido desarrollado en el marco del concurso IDeA FONDEF ID20i10058.
+              </p>
+              <p>
+                El Observatorio Satelital de Nieves tiene como objetivo monitorear las cuencas de Chile, en respuesta a los efectos del cambio climático que están acelerando el derretimiento de nieves y el retroceso de glaciares. Esto facilita la cuantificación de posibles impactos y la preparación de planes de gestión de riesgos, seguridad hídrica y adaptación al cambio climático.
+              </p>
         </div>
       </div>
     </section>
-  
   </main><!-- End #main -->
 
   <section id="page-bottom"></section>
