--- a/pages/equipo.html
+++ b/pages/equipo.html
@@ -170,70 +170,79 @@
           }
         </style>
  <!-- INICIO DE SECCIÓN EQUIPO --> <!-- DESARROLLO TÍTULO PRINCIPAL -->
-  <div class="contenedor-personas">
-      <div class="persona">
-          <img src= "../Imagenes_equipo/Freddy_Saavedra.png"> 
-          <div class="descripcion">
-              <h4><b>Freddy Saavedra</b></h4>
-              <h5>Director de laboratorio</h5>
-              <p></p>
-              <p>Ingeniero agrónomo, PhD en Ciencias de la Tierra en Colorado State University. </p>
-          </div>
-      </div>
-      
-      <div class="persona">
-          <img src="../Imagenes_equipo/Ana_Hernandez.png"> 
-          <div class="descripcion">
-              <h4><b>Ana Hernández-Duarte</b></h4>
-              <h5>Investigadora</h5>
-              <p></p>
-              <p>Arquitecta, MSc. en Desarrollo Regional y Medio Ambiente, Dra(c) en Ciencias Ambientales de la Universidad de Playa Ancha.</p>
-          </div>
-      </div>
-  
-      <div class="persona">
-          <img src="../Imagenes_equipo/Carlos_Romero.png"> 
-          <div class="descripcion">
-              <h4><b>Carlos Romero</b></h4>
-              <h5>Investigador</h5>
-              <p></p>
-              <p>Geógrafo de la Universidad de Playa Ancha.</p>
-          </div>
-      </div>
-  
-      <div class="persona">
-          <img src="../Imagenes_equipo/Valentina_Contreras.png"> 
-          <div class="descripcion">
-              <h4><b>Valentina Contreras</b></h4>
-              <h5>Ayudante de investigación</h5>
-              <p></p>
-              <p style="text-align: justify;">Geógrafa de la Universidad de Playa Ancha. Desarrollo e implementación de algoritmos para la reducción de nubes en la plataforma Google Earth Engine (GEE). Encargada de la generación de la base de datos diarios de nieves con nubes reducidas a nivel nacional. 
-              </p>
-          </div>
-      </div>
-  
-      <div class="persona">
-        <img src="../Imagenes_equipo/Javier_Medina.png"> 
-        <div class="descripcion">
-            <h4><b>Javier Medina </b></h4>
-            <h5>Ayudante de investigación</h5>
-            <p></p>
-            <p style="text-align: justify;">Geólogo de la Universidad Andrés Bello (Viña del Mar). Generación de parámetros estadísticos sobre la cobertura de nieve a nivel de cuenca y nacional. Automatización la exportación de los datos sobre la plataforma final.
-            </p>
-        </div>
-    </div>
-  
-      <div class="persona">
-          <img src="../Imagenes_equipo/Pablo_Arancibia.jpg"> 
-          <div class="descripcion">
-              <h4><b>Pablo Arancibia </b></h4>
-              <h5>Ayudante de investigación</h5>
-              <p></p>
-              <p style="text-align: justify;">Geógrafo egresado de la Universidad de Playa Ancha, especializado en la creación de visualizaciones interactivas. Desarrollador con experiencia en HTML, CSS y JavaScript, enfocado en la representación dinámica de la distribución de la nieve en cuencas a nivel nacional. 
-              </p>
-          </div>
+ <div class="contenedor-personas">
+  <div class="persona">
+      <img src= "../Imagenes_equipo/Freddy_Saavedra.png"> 
+      <div class="descripcion">
+          <h4><b>Freddy Saavedra</b></h4>
+          <h5>Director de laboratorio</h5>
+          <p></p>
+          <p style="text-align: justify;"> Ingeniero agrónomo, PhD en Ciencias de la Tierra en Colorado State University. </p>
+          <p></p>
+          <p> freddy.saavedra@upla.cl   </p>
       </div>
   </div>
+  
+  <div class="persona">
+      <img src="../Imagenes_equipo/Ana_Hernandez.png"> 
+      <div class="descripcion">
+          <h4><b>Ana Hernández-Duarte</b></h4>
+          <h5>Investigadora</h5>
+          <p></p>
+          <p style="text-align: justify;"> Arquitecta, MSc. en Desarrollo Regional y Medio Ambiente, Dra(c) en Ciencias Ambientales de la Universidad de Playa Ancha.</p>
+          <p></p>
+          <p> ana.hernandez@upla.cl </p>
+      </div>
+  </div>
+
+  <div class="persona">
+      <img src="../Imagenes_equipo/Carlos_Romero.png"> 
+      <div class="descripcion">
+          <h4><b>Carlos Romero</b></h4>
+          <h5>Investigador</h5>
+          <p></p>
+          <p style="text-align: justify;"> Geógrafo de la Universidad de Playa Ancha.</p>
+          <p></p>
+          <p> cromero@upla.cl  </p>
+      </div>
+  </div>
+
+  <div class="persona">
+      <img src="../Imagenes_equipo/Valentina_Contreras.png"> 
+      <div class="descripcion">
+          <h4><b>Valentina Contreras</b></h4>
+          <h5>Ayudante de investigación</h5>
+          <p></p>
+          <p style="text-align: justify;">Geógrafa de la Universidad de Playa Ancha. Desarrollo e implementación de algoritmos para la reducción de nubes en la plataforma Google Earth Engine (GEE). Encargada de la generación de la base de datos diarios de nieves con nubes reducidas a nivel nacional. 
+            <p></p>
+            <p> valentina.contreras@upla.cl   </p>
+      </div>
+  </div>
+
+  <div class="persona">
+    <img src="../Imagenes_equipo/Javier_Medina.png"> 
+    <div class="descripcion">
+        <h4><b>Javier Medina </b></h4>
+        <h5>Ayudante de investigación</h5>
+        <p></p>
+        <p style="text-align: justify;">Geólogo de la Universidad Andrés Bello (Viña del Mar). Generación de parámetros estadísticos sobre la cobertura de nieve a nivel de cuenca y nacional. Automatización la exportación de los datos sobre la plataforma final.
+          <p></p>
+          <p> javier.medina.men@upla.cl   </p>
+    </div>
+</div>
+
+  <div class="persona">
+      <img src="../Imagenes_equipo/Pablo_Arancibia.jpg"> 
+      <div class="descripcion">
+          <h4><b>Pablo Arancibia </b></h4>
+          <h5>Ayudante de investigación</h5>
+          <p></p>
+          <p style="text-align: justify;">Geógrafo egresado de la Universidad de Playa Ancha, especializado en la creación de visualizaciones interactivas. Desarrollador con experiencia en HTML, CSS y JavaScript, enfocado en la representación dinámica de la distribución de la nieve en cuencas a nivel nacional. 
+            <p></p>
+            <p> pablo.arancibia.ramos@upla.cl  </p>
+      </div>
+  </div>
+</div>
 
 
 </section >
