--- a/pages/cuencas.html
+++ b/pages/cuencas.html
@@ -235,17 +235,16 @@
   </section>
 
 <!-- FIN SECCIÓN TÍTULO PRINCIPAL -->
+<!-- Leaflet JS -->
+<script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
+<!-- Georaster -->
+<script src="https://unpkg.com/georaster"></script>
+<!-- Georaster layer for Leaflet -->
+<script src="https://unpkg.com/georaster-layer-for-leaflet/dist/georaster-layer-for-leaflet.min.js"></script>
+<script src="https://unpkg.com/geoblaze"></script>
+<!-- Leaflet Side-by-Side -->
+<script src='/assets/js/lib/leaflet-side-by-side.min.js'></script>
 
-    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
-    <!-- Georaster -->
-    <script src="https://unpkg.com/georaster"></script>
-    <!-- Georaster layer for Leaflet -->
-    <script src="https://unpkg.com/georaster-layer-for-leaflet/dist/georaster-layer-for-leaflet.min.js"></script>
-    <script src="https://unpkg.com/geoblaze"></script>
-    <!-- Leaflet Side-by-Side -->
-    <script src='/assets/js/lib/leaflet-side-by-side.js'></script>
-    <script src='/assets/js/lib/leaflet-side-by-side.min.js'></script>
-  
 
 
 
