--- a/pages/cuencas.html
+++ b/pages/cuencas.html
@@ -243,7 +243,9 @@
 <script src="https://unpkg.com/georaster-layer-for-leaflet/dist/georaster-layer-for-leaflet.min.js"></script>
 <script src="https://unpkg.com/geoblaze"></script>
 <!-- Leaflet Side-by-Side -->
-<script src='../assets/js/lib/leaflet-side-by-side.min.js'></script>
+<script src="/assets/js/lib/leaflet-side-by-side.min.js"></script>
+
+
 
 
 
