--- a/index.html
+++ b/index.html
@@ -113,8 +113,7 @@ href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"
   <section id="page-title">
     <h2>Inicio</h2>
   </section>
-  
-  <main id="main" class="p-3">
+
   
     <div class="container">
       <div class="row">
@@ -122,24 +121,22 @@ href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"
       </div>
     </div>
   
-    <section class="p-3">
-      <div class="container" style="margin: 50; padding: 50;">
-        <div class="row " style="margin: -100px; padding: -50px;">
-          <h5 class="text-uppercase text-justify txt-naranjo-2">Observatorio Satelital De Nieves</h5>
-          <div class="col-12 text-justify" >
-            <p>
-            </p>
-            <p style="text-align: justify;">
-              <p>
+    <section class="p-3 p-md-4">
+      <div class="container py-3">
+          <div class="row justify-content-center">
+              <div class="col-12 col-md-10">
+                  <h5 class="text-uppercase txt-naranjo-2 mb-4">Observatorio Satelital De Nieves</h5>
+                  <div class="text-content">
+                    <p class="mb-3">
                 En los Andes chilenos, la nieve se acumula durante el invierno y luego se derrite gradualmente durante primavera-verano. Esta reserva, suministra agua durante la estación seca para la agricultura, la industria y el consumo humano. La nieve tiene un papel importante en la regulación del clima y la conservación de los ecosistemas de montaña, constituyendo un entorno crucial para diversas especies tanto animales como vegetales. En las últimas décadas, la tasa de derretimiento de nieve se ha acelerado en el contexto de cambio climático, conocer el estado de la nieve es una información vital para la gestión y planificación hídrica.
               </p>
-              <p>
+               <p class="mb-3">
                 En Chile, el conocimiento sobre el estado de la nieve se basa en registros in situ y satelitales. Las mediciones in situ, realizadas a través de estaciones meteorológicas y mediciones manuales, están limitadas por la baja densidad de estaciones en zonas montañosas y la ubicación condicionada por la accesibilidad, lo que afecta la representatividad de los datos. Las mediciones manuales, además, son discontinuas y no capturan eventos extremos como nevadas intensas o derretimientos abruptos. La falta de datos climáticos precisos y la baja densidad de estaciones dificultan las estimaciones del volumen de agua proveniente de la nieve, lo cual interfiere en la planificación y gestión hídrica en las cuencas del país. En este contexto, la teledetección ofrece la posibilidad de cuantificar la cobertura de nieve y estimar su equivalente en agua a diferentes escalas espacio-temporales.
               </p>
-              <p>
+              <p class="mb-3">
                 El Laboratorio de Teledetección Ambiental (TeleAmb) de la Universidad de Playa Ancha desarrolló del Observatorio Satelital de Nieves (OSN) durante los años 2020-2022 con un fondo ANID FONDEF (FONDEF IDeA ID20i10058), que actualmente se fortalece a través del proyecto "Consolidación del Observatorio Satelital de Nieve a Nivel Nacional" (FONDEF IT24I0092) en el marco del Concurso de Investigación Tecnológica 2024 de FONDEF que se ejecutará entre los años 2024-2025.
                </p>
-              <p>
+               <p class="mb-3">
                 La información presentada se realizó utilizando los programas MODIS (Terra & Aqua) sobre todo el territorio continental chileno. Se incorporarán otras fuentes satelitales como VIIRS para asegurar la sostenibilidad del OSN. Además, se trabajará con otras fuentes satelitales para aumentar la resolución espacial (Landsat y Sentinel) como también desarrollará un modelo de equivalencia de agua de nieve (SWE, por sus siglas en inglés) sobre 6 cuencas seleccionadas.
                </p>
  
