--- a/pages/equipo.html
+++ b/pages/equipo.html
@@ -110,29 +110,27 @@
     </div>
   </header><!-- End Header -->
 
-  <section id="hero-obs" class=""></section>
+  <main id="main" class="p-3"></main>
 
-  <section id="page-title">
-    <h2>Equipo</h2>
-  </section>
-  
-  <main id="main" class="p-3">
-  
+  <section id="page-title" class="container-fluid p-3">
     <div class="container">
-      <div class="row">
-      
-      </div>
+        <div class="row">
+            <div class="col-12">
+                <h2 class="titulo-inicio">Equipo</h2>
+            </div>
+        </div>
     </div>
+</section>
+  
+
+  
+
   
 <!-- INICIO SECCIÓN TÍTULO PRINCIPAL -->
 <!-- INICIO DE SECCIÓN EQUIPO -->
 <section id="team" class="team">
   <div class="container" data-aos="fade-up">
 
-    <!-- Encabezado de la sección -->
-    <div class="section-header" style="text-align: center; margin-bottom: 60px;">
-      <h2>Equipo</h2>
-    </div>
 
     <!-- Sección: Directores -->
     <div class="section-header" style="text-align: center; margin-bottom: 40px;">
@@ -148,7 +146,7 @@
           <div class="member-info">
             <h4>Freddy Saavedra</h4>
             <span>Director</span>
-            <p>Ingeniero agrónomo, PhD en Ciencias de la Tierra en Colorado State University.</p>
+            <p>Ingeniero Agrónomo, PhD. en Ciencias de la Tierra en Colorado State University.</p>
           </div>
         </div>
       </div>
@@ -161,7 +159,7 @@
           <div class="member-info">
             <h4>Marcelo Leguía</h4>
             <span>Director Alterno</span>
-            <p>Geógrafo. Magíster en Áreas Silvestres y Conservación de la Naturaleza, Universidad de Chile.</p>
+            <p>Geógrafo, MSc. en Áreas Silvestres y Conservación de la Naturaleza en Universidad de Chile.</p>
           </div>
         </div>
       </div>
@@ -184,7 +182,7 @@
       <div class="member-info">
         <h4>Ana Hernández-Duarte</h4>
         <span>Investigadora</span>
-        <p>Arquitecta, MSc. en Desarrollo Regional y Medio Ambiente, Dra(c) en Ciencias Ambientales.</p>
+        <p>Arquitecta, MSc. en Desarrollo Regional y Medio Ambiente, PhD. en Ciencias Ambientales en Universidad de Playa Ancha</p>
       </div>
     </div>
   </div>
@@ -195,9 +193,9 @@
         <img src="../Imagenes_equipo/Alex_Caro.jpeg" class="img-fluid team-img" style="width: 500px; height: 250px;">
       </div>
       <div class="member-info">
-        <h4>Alex Caro</h4>
+        <h4>Alexis Caro</h4>
         <span>Investigador</span>
-       <p> Geografo, PhD en Ciencas de la tierra</p>
+       <p> Geógrafo, MSc. en Geología, PhD. en Ciencias de la Tierra en Université Grenoble Alpes </p>
       </div>
     </div>
   </div>
@@ -247,7 +245,7 @@
           <div class="member-info">
             <h4>Pablo Arancibia Ramos</h4>
             <span>Asistente de Investigación</span>
-            <p>Geógrafo egresado de la Universidad de Playa Ancha, especializado en visualizaciones interactivas.</p>
+            <p>Geógrafo de la Universidad de Playa Ancha</p>
           </div>
         </div>
       </div>
@@ -270,7 +268,7 @@
           <div class="member-info">
             <h4>Carlos Romero</h4>
             <span>Estudiante de Posgrado</span>
-            <p>Geógrafo de la Universidad de Playa Ancha.</p>
+            <p>Geógrafo, MSc. en Gestion Ambiental, PhD.(c) en Ciencias Ambientales en Universidad de Playa Ancha</p>
           </div>
         </div>
       </div>
