--- a/pages/explorador.html
+++ b/pages/explorador.html
@@ -213,7 +213,7 @@ setTimeout(() => {
       </th>
       <th>
         <div class="custom_heading-test">
-          Anomalías Cobertura Máxima 2024
+          Anomalía invernal 2024
         </div>
       </th>
     </tr>
